tests/NormalTests/paczka1/small_fuzzy/60744385.err
Error in line 2: 2E5c7p S56 25,1
Error in line 3: 2E5c7p A621 22,9
Error in line 9: fDxJBWO A999 93,5
